--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emarketeross/simple-react-intersection-observer": "^0.1.13",
     "bootstrap": "^4.3.1",
-    "google-map-react": "^1.1.4",
-    "google-maps-react": "^2.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
+    "react-image": "^2.2.0",
     "react-player": "^1.12.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
