--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-google-maps": "^9.4.5",
     "react-player": "^1.12.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-waypoint": "^9.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
