--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
-    "react-image-gallery": "^0.9.1",
     "react-player": "^1.12.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "react-waypoint": "^9.0.2"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
