--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
+    "react-image-gallery": "^0.9.1",
     "react-player": "^1.12.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
